--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -1,8 +1,11 @@
 .nav{
+    position:fixed;
+    top:0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     background-color: darkblue;
+    width:100%;
 }
 
 .weekly_weather{
