--- a/src/components/DailyWeather.module.css
+++ b/src/components/DailyWeather.module.css
@@ -1,3 +1,10 @@
 .daily_weather{
-    margin-left:50px;
+    margin-left: 43.2%;
+    
+}
+
+.daily_weather_card{
+    margin-left:0px;
+    height:400px;
+    width:300px;
 }
