--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -1,4 +1,4 @@
-.nav{
+/* .nav{
     position:fixed;
     top:0;
     display: flex;
@@ -45,4 +45,4 @@
 
 .query:focus{
     background-color: gray;
-}
+} */
