--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -1,6 +1,11 @@
+.top_nav{
+    background-color: lightskyblue;
+    width:100%;
+    height:50px;
+    margin-top: 0;
+}
+
 .nav{
-    position:fixed;
-    top:0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
