--- a/src/components/DailyWeather.module.css
+++ b/src/components/DailyWeather.module.css
@@ -1,5 +1,34 @@
 .daily_weather_card_big{
+    margin:auto;
+    margin-top:5px;
+    margin-bottom: 5px;
     width:600px;
     height:300px;
-    text-align: center;    
+    animation: loadWeather .5s ease-out;
+    background-color: white;
+    text-align: center;
+}
+
+@keyframes loadWeather {
+    0%{
+        transform: translateY(25%);
+    }
+    100%{
+        transform: translateY(0);
+    }
+    
+}    
+
+
+.big_weather_day_display{
+    display:flex;
+    background-color: white;
+    flex-direction: row;
+    justify-content: space-between;
+    border-radius: 10px;
+}
+
+.big_weather_day_display_day{
+    background-color: white;
+    margin-left:200px;
 }
