--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -1,4 +1,5 @@
 .top_nav{
+    display:inline-block;
     background-color: lightskyblue;
     width:100%;
     height:50px;
@@ -17,7 +18,7 @@
     margin-left:100px;
     margin-bottom:10px;
     text-decoration: none;
-    width:75px;
+    width:150px;
     padding:1px 1px;
     color:white;
     text-align: center;
@@ -32,7 +33,7 @@
     margin-right:100px;
     margin-bottom:10px;
     text-decoration: none;
-    width:75px;
+    width:150px;
     padding:1px 1px;
     color:white;
     text-align: center;
@@ -43,11 +44,20 @@
     border-bottom: 1px solid white;
 }
 
-.query{
-    margin-top:20px;
-    width:50px;
+.get_location{
+    margin-bottom:10px;
+    text-decoration: none;
+    width:200px;
+    padding:1px 1px;
+    color:white;
+    border-bottom: 1px solid transparent;
 }
 
-.query:focus{
-    background-color: gray;
+.get_location:hover{
+    border-bottom: 1px solid white;
+    cursor:pointer;
+}
+
+.get_location:focus{
+    cursor:text;
 }
