--- a/src/components/WeeklyWeather.module.css
+++ b/src/components/WeeklyWeather.module.css
@@ -1,7 +1,6 @@
 .weekly_weather{
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     animation: loadWeather .5s ease-in;
     text-align: center;
 }
@@ -15,4 +14,40 @@
     }
     
 }
+
+.lds_ring {
+    display: inline-block;
+    position: relative;
+    width: 50px;
+    height: 50px;
+  }
+  .lds_ring div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    margin: 5px;
+    border: 5px solid darkblue;
+    border-radius: 50%;
+    animation: lds_ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: darkblue transparent transparent transparent;
+  }
+  .lds_ring div:nth-child(1) {
+    animation-delay: -0.45s;
+  }
+  .lds_ring div:nth-child(2) {
+    animation-delay: -0.3s;
+  }
+  .lds_ring div:nth-child(3) {
+    animation-delay: -0.15s;
+  }
+  @keyframes lds_ring {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
 
