--- a/src/components/InitialWeather.module.css
+++ b/src/components/InitialWeather.module.css
@@ -1,46 +1,13 @@
 .daily_weather{
-    height:75px;
+    height:50px;
 }
 
 .show_weather{
   padding:2px 20px;
   width:500px;
+  color:white;
   margin-bottom:50px;
   border-right: 1px solid darkslategray;
+  margin-left:150px;
 }
 
-.lds_ring {
-  display: inline-block;
-  position: relative;
-  width: 50px;
-  height: 50px;
-}
-.lds_ring div {
-  box-sizing: border-box;
-  display: block;
-  position: absolute;
-  width: 40px;
-  height: 40px;
-  margin: 5px;
-  border: 5px solid darkblue;
-  border-radius: 50%;
-  animation: lds_ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: darkblue transparent transparent transparent;
-}
-.lds_ring div:nth-child(1) {
-  animation-delay: -0.45s;
-}
-.lds_ring div:nth-child(2) {
-  animation-delay: -0.3s;
-}
-.lds_ring div:nth-child(3) {
-  animation-delay: -0.15s;
-}
-@keyframes lds_ring {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
