--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,6 @@
 .background_color{
-    height:100%;
     background: rgb(2,0,36);
     background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(61,61,141,1) 35%, rgba(0,212,255,1) 100%);
+    height:1000px;
 }
 
