--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -11,13 +11,14 @@
     flex-direction: row;
     background-color: darkblue;
     width:100%;
+    height:55px;
 }
 
 .weekly_weather{
     margin-left:100px;
-    margin-bottom:10px;
     text-decoration: none;
-    width:150px;
+    margin-bottom:10px;
+    width:120px;
     padding:1px 1px;
     color:white;
     text-align: center;
@@ -32,7 +33,7 @@
     margin-right:100px;
     margin-bottom:10px;
     text-decoration: none;
-    width:150px;
+    width:105px;
     padding:1px 1px;
     color:white;
     text-align: center;
@@ -46,7 +47,7 @@
 .get_location{
     margin-bottom:10px;
     text-decoration: none;
-    width:200px;
+    width:195px;
     padding:1px 1px;
     color:white;
     border-bottom: 1px solid transparent;
